# OpenGL-Blue-Marble

./: CMakeLists.txt  README.md  main.cpp
shaders/: triangle_fragment.glsl  triangle_vertex.glsl
